--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a
             id="resumeBtn"
             class="ml-4 inline-flex items-center gap-2 px-3 py-2 rounded-md text-white"
-            href="https://drive.google.com/uc?export=download&id=1TxWOKML2Le7okNLkxby374EuhOW6mzQd"
+            href="https://drive.google.com/file/d/13fcms3s-wpMS53e8E7Ybz5L64176tldI/view?usp=sharing"
             target="_blank"
             rel="noopener"
             >Download Resume</a
@@ -102,7 +102,7 @@
           <a
             class="mt-2 inline-block px-3 py-2 rounded-md text-white"
             style="background: linear-gradient(90deg, #ff4da6, #ff90d1)"
-            href="https://drive.google.com/uc?export=download&id=1TxWOKML2Le7okNLkxby374EuhOW6mzQd"
+            href="https://drive.google.com/file/d/13fcms3s-wpMS53e8E7Ybz5L64176tldI/view?usp=sharing"
             target="_blank"
             rel="noopener"
             >Download Resume</a
@@ -600,7 +600,7 @@
               <a
                 class="inline-block px-3 py-2 rounded-md text-white"
                 style="background: linear-gradient(90deg, #ff4da6, #ff90d1)"
-                href="https://drive.google.com/uc?export=download&id=1TxWOKML2Le7okNLkxby374EuhOW6mzQd"
+                href="https://drive.google.com/file/d/13fcms3s-wpMS53e8E7Ybz5L64176tldI/view?usp=sharing"
                 target="_blank"
                 rel="noopener"
                 >Download Resume</a
@@ -723,3 +723,4 @@
     </script>
   </body>
 </html>
+
