--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             class="rounded-2xl overflow-hidden soft glass border"
             style="border-color: rgba(255, 77, 166, 0.08)"
           >
-           <img
-  src="image/prachi new photo.jpg"
+          <img 
+  src="prachi-photo.jpg" 
   alt="Prachi Jha Profile"
   class="w-36 h-36 object-cover rounded-lg mx-auto shadow-lg mt-8"
 />
@@ -723,3 +723,4 @@
     </script>
   </body>
 </html>
+
