--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
               <div class="mt-6 flex justify-center gap-3">
                 
                 <a
-                  href="https://codolio.com/profile/prachijha05"
+                  href="https://github.com/prachijha05"
                   target="_blank"
                   rel="noopener"
-                  aria-label="codolio"
+                  aria-label="github"
                   class="p-2 rounded-md hover:bg-pink-50"
-                  >Codolio</a
+                  >github</a
                 >
                 <a
                   href="https://www.linkedin.com/in/prachi-jha-b084b828b/"
@@ -723,4 +723,5 @@
     </script>
   </body>
 </html>
+
 
