--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             style="border-color: rgba(255, 77, 166, 0.08)"
           >
            <img
-  src="image/prachi new photo.jpg"
+  src="image/prachi-photo.jpg"
   alt="Prachi Jha Profile"
   class="w-36 h-36 object-cover rounded-lg mx-auto shadow-lg mt-8"
 />
