--- a/index.html
+++ b/index.html
@@ -172,11 +172,8 @@
             class="rounded-2xl overflow-hidden soft glass border"
             style="border-color: rgba(255, 77, 166, 0.08)"
           >
-           <img
-  src="image/prachi-photo.jpg"
-  alt="Prachi Jha Profile"
-  class="w-36 h-36 object-cover rounded-lg mx-auto shadow-lg mt-8"
-/>
+          <img src="prachi-photo.jpg" alt="Prachi Jha" style="width:100%; max-width:400px; height:auto; display:block; margin:20px auto; border-radius:12px;">
+
 
 
 
@@ -723,3 +720,4 @@
     </script>
   </body>
 </html>
+
