--- a/index.html
+++ b/index.html
@@ -172,12 +172,9 @@
             class="rounded-2xl overflow-hidden soft glass border"
             style="border-color: rgba(255, 77, 166, 0.08)"
           >
-         <img 
-  src="prachi-photo.jpg" 
-  alt="Prachi Jha Profile"
-  class="w-36 h-36 object-cover rounded-lg mx-auto shadow-lg mt-8"
-/>
-
+          <img src="image/prachi-photo.jpg" 
+     alt="Prachi Jha Profile"
+     class="w-36 h-36 object-cover rounded-lg mx-auto shadow-lg mt-8">
 
 
 
@@ -725,5 +722,3 @@
     </script>
   </body>
 </html>
-
-
